Implementacion en capas (dao, daoimpl) de auxiliares: departamento,rubro,familia. interfaz datoscompartidos para que esten disponible desde la ventana principal al resto de ventanas que se abran e implementen esta interfaz.